--- a/package.json
+++ b/package.json
@@ -238,7 +238,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "sqlite3": "^5.0.2"
   },
   "devEngines": {
     "node": ">=14.x",
