--- a/package.json
+++ b/package.json
@@ -238,6 +238,7 @@
     "nedb-promises": "^5.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "regenerator-runtime": "^0.13.9",
     "sqlite3": "^5.0.2"
